clusters/apps/base/forgejo/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: forgejo
  type: ClusterIP
